force-app/main/default/objects/Account/fields/Regional__c.field-meta.xml
<CustomField>
    <fullName>Regional__c</fullName>
    <description>Regional de atuação</description>
    <label>Regional</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distrital Leste</fullName>
            </value>
            <value>
                <fullName>Distrital São Paulo</fullName>
            </value>
            <value>
                <fullName>Distrital Sul</fullName>
            </value>
            <value>
                <fullName>Regional ABC</fullName>
            </value>
            <value>
                <fullName>Regional Araçatuba</fullName>
            </value>
            <value>
                <fullName>Baixada Santista</fullName>
            </value>
            <value>
                <fullName>Bauru</fullName>
            </value>
            <value>
                <fullName>Campinas</fullName>
            </value>
            <value>
                <fullName>Guarulhos</fullName>
            </value>
            <value>
                <fullName>Marília</fullName>
            </value>
            <value>
                <fullName>Osasco</fullName>
            </value>
            <value>
                <fullName>Presidente Prudente</fullName>
            </value>
            <value>
                <fullName>Ribeirão Preto</fullName>
            </value>
            <value>
                <fullName>São José do Rio Preto</fullName>
            </value>
            <value>
                <fullName>Sorocaba</fullName>
            </value>
            <value>
                <fullName>Vale do Paraíba</fullName>
            </value>
            <value>
                <fullName>Outros Estados</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>