force-app/main/default/objects/Account/fields/SistemaHelpDesk__c.field-meta.xml
<CustomField>
    <fullName>SistemaHelpDesk__c</fullName>
    <label>Sistema Help Desk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acelerato</fullName>
            </value>
            <value>
                <fullName>Freshdesk</fullName>
            </value>
            <value>
                <fullName>Zendesk</fullName>
            </value>
            <value>
                <fullName>Movidesk</fullName>
            </value>
            <value>
                <fullName>Octadesk</fullName>
            </value>
            <value>
                <fullName>Tom Ticket</fullName>
            </value>
            <value>
                <fullName>Desk Manager</fullName>
            </value>
            <value>
                <fullName>Geiko</fullName>
            </value>
            <value>
                <fullName>AuvoDesk</fullName>
            </value>
            <value>
                <fullName>Mildesk</fullName>
            </value>
            <value>
                <fullName>Zoho</fullName>
            </value>
            <value>
                <fullName>Pipefy</fullName>
            </value>
            <value>
                <fullName>OTRS</fullName>
            </value>
            <value>
                <fullName>Sistema Próprio</fullName>
            </value>
            <value>
                <fullName>Milvus</fullName>
            </value>
            <value>
                <fullName>monday.com</fullName>
            </value>
            <value>
                <fullName>SysAid</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Live Agent</fullName>
            </value>
            <value>
                <fullName>Service Now</fullName>
            </value>
            <value>
                <fullName>Hubspot Service Hub</fullName>
            </value>
            <value>
                <fullName>Sensr. IT Tivit</fullName>
            </value>
            <value>
                <fullName>Agidesk</fullName>
            </value>
            <value>
                <fullName>Brazip mY suite</fullName>
            </value>
            <value>
                <fullName>GLPI</fullName>
            </value>
            <value>
                <fullName>Ellevo</fullName>
            </value>
            <value>
                <fullName>Groove</fullName>
            </value>
            <value>
                <fullName>Redmine</fullName>
            </value>
            <value>
                <fullName>TI Flux</fullName>
            </value>
            <value>
                <fullName>HelpShift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>