force-app/main/default/objects/Account/fields/SistemaProjetos__c.field-meta.xml
<CustomField>
    <fullName>SistemaProjetos__c</fullName>
    <label>Sistema de Projetos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jira Projetos</fullName>
            </value>
            <value>
                <fullName>Trello</fullName>
            </value>
            <value>
                <fullName>Monday.com</fullName>
            </value>
            <value>
                <fullName>Asana</fullName>
            </value>
            <value>
                <fullName>Bitrix</fullName>
            </value>
            <value>
                <fullName>Microsoft Project</fullName>
            </value>
            <value>
                <fullName>Artia</fullName>
            </value>
            <value>
                <fullName>Run Run IT</fullName>
            </value>
            <value>
                <fullName>Smartsheet</fullName>
            </value>
            <value>
                <fullName>Click Up</fullName>
            </value>
            <value>
                <fullName>Wrike</fullName>
            </value>
            <value>
                <fullName>Basecamp</fullName>
            </value>
            <value>
                <fullName>Sensr. IT Tivit</fullName>
            </value>
            <value>
                <fullName>Fluig TOTVS</fullName>
            </value>
            <value>
                <fullName>Deskmanager</fullName>
            </value>
            <value>
                <fullName>Redmine</fullName>
            </value>
            <value>
                <fullName>OpenProject</fullName>
            </value>
            <value>
                <fullName>GitLab</fullName>
            </value>
            <value>
                <fullName>Azure DevOps</fullName>
            </value>
            <value>
                <fullName>Notion</fullName>
            </value>
            <value>
                <fullName>Airtable</fullName>
            </value>
            <value>
                <fullName>Zoho Projects</fullName>
            </value>
            <value>
                <fullName>Não possui ferramenta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>