force-app/main/default/objects/Account/fields/SistemaWhatsapp__c.field-meta.xml
<CustomField>
    <fullName>SistemaWhatsapp__c</fullName>
    <label>Sistema de Whatsapp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Take Blip</fullName>
            </value>
            <value>
                <fullName>Kommo</fullName>
            </value>
            <value>
                <fullName>Manychat</fullName>
            </value>
            <value>
                <fullName>Twilio</fullName>
            </value>
            <value>
                <fullName>BotConversa</fullName>
            </value>
            <value>
                <fullName>ChatGuru</fullName>
            </value>
            <value>
                <fullName>chatPro</fullName>
            </value>
            <value>
                <fullName>UnderCHAT</fullName>
            </value>
            <value>
                <fullName>Wati</fullName>
            </value>
            <value>
                <fullName>Octadesk</fullName>
            </value>
            <value>
                <fullName>Z-API</fullName>
            </value>
            <value>
                <fullName>Respond.io</fullName>
            </value>
            <value>
                <fullName>DIGISAC</fullName>
            </value>
            <value>
                <fullName>Loopchat</fullName>
            </value>
            <value>
                <fullName>RD Station Conversas</fullName>
            </value>
            <value>
                <fullName>360dialog</fullName>
            </value>
            <value>
                <fullName>Não possui ferramenta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>