force-app/main/default/objects/Account/fields/StatusERP__c.field-meta.xml
<CustomField>
    <fullName>StatusERP__c</fullName>
    <label>Status ERP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apresentado, sem interesse no momento</fullName>
            </value>
            <value>
                <fullName>Apresentado sem interesse no momento</fullName>
            </value>
            <value>
                <fullName>Apresentamos no passado - Retomar contato</fullName>
            </value>
            <value>
                <fullName>Churn - Já foi cliente e cancelou</fullName>
            </value>
            <value>
                <fullName>Cliente ativo - Bluesoft ERP</fullName>
            </value>
            <value>
                <fullName>Cliente churn - Cancelado</fullName>
            </value>
            <value>
                <fullName>Desqualificado - ERP não aderente</fullName>
            </value>
            <value>
                <fullName>ERP não é aderente ao cliente</fullName>
            </value>
            <value>
                <fullName>Já é cliente Bluesoft ERP</fullName>
            </value>
            <value>
                <fullName>Lead com proposta comercial</fullName>
            </value>
            <value>
                <fullName>Não está satisfeito com o atual sistema</fullName>
            </value>
            <value>
                <fullName>Não possui interesse de contratar/trocar</fullName>
            </value>
            <value>
                <fullName>Não possui interesse em conhecer</fullName>
            </value>
            <value>
                <fullName>Nunca apresentamos</fullName>
            </value>
            <value>
                <fullName>Possui interesse de troca</fullName>
            </value>
            <value>
                <fullName>Possui interesse em conhecer</fullName>
            </value>
            <value>
                <fullName>Possui projeto futuro de troca</fullName>
            </value>
            <value>
                <fullName>Trocou a gestão a menos de 1 ano</fullName>
            </value>
            <value>
                <fullName>Trocou o sistema a menos de 1 ano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>