force-app/main/default/objects/Account/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>Tags/etiquetas para classificacao livre da conta. Usa Global Value Set &quot;Tags&quot;.</description>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tags</valueSetName>
    </valueSet>
</CustomField>