force-app/main/default/objects/Account/fields/Tamanho__c.field-meta.xml
<CustomField>
    <fullName>Tamanho__c</fullName>
    <label>Tamanho</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESMERALDA &gt; 10Bi</fullName>
            </value>
            <value>
                <fullName>SAFIRA &gt; 5Bi</fullName>
            </value>
            <value>
                <fullName>DIAMANTE &gt; 1Bi</fullName>
            </value>
            <value>
                <fullName>OURO &gt; 500M</fullName>
            </value>
            <value>
                <fullName>PRATA &gt; 250M</fullName>
            </value>
            <value>
                <fullName>BRONZE &lt; 250M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>