force-app/main/default/objects/Account/fields/WMS__c.field-meta.xml
<CustomField>
    <fullName>WMS__c</fullName>
    <label>WMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alcis</fullName>
            </value>
            <value>
                <fullName>Bluesoft</fullName>
            </value>
            <value>
                <fullName>FullSoft</fullName>
            </value>
            <value>
                <fullName>Lumi Software</fullName>
            </value>
            <value>
                <fullName>MHA Sistemas</fullName>
            </value>
            <value>
                <fullName>Não possui</fullName>
            </value>
            <value>
                <fullName>Próprio</fullName>
            </value>
            <value>
                <fullName>RP Info</fullName>
            </value>
            <value>
                <fullName>Solidcon</fullName>
            </value>
            <value>
                <fullName>TOTVS Consinco</fullName>
            </value>
            <value>
                <fullName>TOTVS RMS</fullName>
            </value>
            <value>
                <fullName>TOTVS Winthor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>