force-app/main/default/objects/Account/validationRules/CNPJ_Somente_Numeros.validationRule-meta.xml
<ValidationRule>
    <fullName>CNPJ_Somente_Numeros</fullName>
    <active>true</active>
    <description>Garante que o campo CNPJ aceite somente números.</description>
    <errorConditionFormula>NOT(ISBLANK(CNPJ__c)) &amp;&amp; NOT(REGEX(CNPJ__c, &quot;^[0-9]+$&quot;))</errorConditionFormula>
    <errorDisplayField>CNPJ__c</errorDisplayField>
    <errorMessage>O CNPJ deve conter somente números (sem pontos, barras ou hífens).</errorMessage>
</ValidationRule>